# tuplemagic

./: Cargo.toml  README.md
src/: filter.rs  lib.rs  map.rs  nest.rs  reduce.rs
